// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldName renders a custom description icon 1`] = `
Array [
  <div
    class="euiFlexItem kbnDocViewer__fieldIcon emotion-euiFlexItem-growZero"
  >
    <span
      class="euiToken kbnFieldIcon emotion-euiToken-square-light-s-euiColorVis1"
    >
      <span
        data-euiicon-type="tokenString"
        title="String"
      >
        String
      </span>
    </span>
  </div>,
  <div
    class="euiFlexGroup emotion-euiFlexGroup-none-flexStart-flexStart-row"
  >
    <div
      class="euiFlexItem kbnDocViewer__fieldName eui-textBreakAll emotion-euiFlexItem-growZero"
    >
      <span
        class="euiToolTipAnchor eui-textBreakAll emotion-euiToolTipAnchor-inlineBlock"
      >
        <span>
          test
        </span>
      </span>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <span>
        <div
          class="euiPopover emotion-euiPopover-inline-block"
        >
          <button
            aria-label="View field description"
            class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
            data-test-subj="fieldDescriptionPopoverButton-bytes"
            title="View field description"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="iInCircle"
            />
          </button>
        </div>
      </span>
    </div>
  </div>,
]
`;

exports[`FieldName renders a geo field 1`] = `
Array [
  <div
    class="euiFlexItem kbnDocViewer__fieldIcon emotion-euiFlexItem-growZero"
  >
    <span
      class="euiToken kbnFieldIcon emotion-euiToken-square-light-s-euiColorVis5"
    >
      <span
        data-euiicon-type="tokenGeo"
        title="Geo point"
      >
        Geo point
      </span>
    </span>
  </div>,
  <div
    class="euiFlexGroup emotion-euiFlexGroup-none-flexStart-flexStart-row"
  >
    <div
      class="euiFlexItem kbnDocViewer__fieldName eui-textBreakAll emotion-euiFlexItem-growZero"
    >
      <span
        class="euiToolTipAnchor eui-textBreakAll emotion-euiToolTipAnchor-inlineBlock"
      >
        <span>
          test.test.test
        </span>
      </span>
    </div>
  </div>,
]
`;

exports[`FieldName renders a number field by providing a field record 1`] = `
Array [
  <div
    class="euiFlexItem kbnDocViewer__fieldIcon emotion-euiFlexItem-growZero"
  >
    <span
      class="euiToken kbnFieldIcon emotion-euiToken-square-light-s-euiColorVis0"
    >
      <span
        data-euiicon-type="tokenNumber"
        title="Number"
      >
        Number
      </span>
    </span>
  </div>,
  <div
    class="euiFlexGroup emotion-euiFlexGroup-none-flexStart-flexStart-row"
  >
    <div
      class="euiFlexItem kbnDocViewer__fieldName eui-textBreakAll emotion-euiFlexItem-growZero"
    >
      <span
        class="euiToolTipAnchor eui-textBreakAll emotion-euiToolTipAnchor-inlineBlock"
      >
        <span>
          test.test.test
        </span>
      </span>
    </div>
  </div>,
]
`;

exports[`FieldName renders a string field by providing fieldType and fieldName 1`] = `
Array [
  <div
    class="euiFlexItem kbnDocViewer__fieldIcon emotion-euiFlexItem-growZero"
  >
    <span
      class="euiToken kbnFieldIcon emotion-euiToken-square-light-s-euiColorVis1"
    >
      <span
        data-euiicon-type="tokenString"
        title="String"
      >
        String
      </span>
    </span>
  </div>,
  <div
    class="euiFlexGroup emotion-euiFlexGroup-none-flexStart-flexStart-row"
  >
    <div
      class="euiFlexItem kbnDocViewer__fieldName eui-textBreakAll emotion-euiFlexItem-growZero"
    >
      <span
        class="euiToolTipAnchor eui-textBreakAll emotion-euiToolTipAnchor-inlineBlock"
      >
        <span>
          test
        </span>
      </span>
    </div>
  </div>,
]
`;

exports[`FieldName renders unknown field 1`] = `
Array [
  <div
    class="euiFlexItem kbnDocViewer__fieldIcon emotion-euiFlexItem-growZero"
  >
    <span
      class="euiToken kbnFieldIcon emotion-euiToken-circle-light-s-gray"
    >
      <span
        data-euiicon-type="questionInCircle"
        title="Unknown field"
      >
        Unknown field
      </span>
    </span>
  </div>,
  <div
    class="euiFlexGroup emotion-euiFlexGroup-none-flexStart-flexStart-row"
  >
    <div
      class="euiFlexItem kbnDocViewer__fieldName eui-textBreakAll emotion-euiFlexItem-growZero"
    >
      <span
        class="euiToolTipAnchor eui-textBreakAll emotion-euiToolTipAnchor-inlineBlock"
      >
        <span>
          test.test.test
        </span>
      </span>
    </div>
  </div>,
]
`;

exports[`FieldName renders when mapping is provided 1`] = `
Array [
  <div
    class="euiFlexItem kbnDocViewer__fieldIcon emotion-euiFlexItem-growZero"
  >
    <span
      class="euiToken kbnFieldIcon emotion-euiToken-square-light-s-euiColorVis0"
    >
      <span
        data-euiicon-type="tokenNumber"
        title="Number"
      >
        Number
      </span>
    </span>
  </div>,
  <div
    class="euiFlexGroup emotion-euiFlexGroup-none-flexStart-flexStart-row"
  >
    <div
      class="euiFlexItem kbnDocViewer__fieldName eui-textBreakAll emotion-euiFlexItem-growZero"
    >
      <span
        class="euiToolTipAnchor eui-textBreakAll emotion-euiToolTipAnchor-inlineBlock"
      >
        <span>
          bytes
        </span>
      </span>
    </div>
  </div>,
]
`;

exports[`FieldName renders with a search highlight 1`] = `
Array [
  <div
    class="euiFlexItem kbnDocViewer__fieldIcon emotion-euiFlexItem-growZero"
  >
    <span
      class="euiToken kbnFieldIcon emotion-euiToken-square-light-s-euiColorVis0"
    >
      <span
        data-euiicon-type="tokenNumber"
        title="Number"
      >
        Number
      </span>
    </span>
  </div>,
  <div
    class="euiFlexGroup emotion-euiFlexGroup-none-flexStart-flexStart-row"
  >
    <div
      class="euiFlexItem kbnDocViewer__fieldName eui-textBreakAll emotion-euiFlexItem-growZero"
    >
      <span
        class="euiToolTipAnchor eui-textBreakAll emotion-euiToolTipAnchor-inlineBlock"
      >
        <span>
          <mark
            class="euiMark emotion-euiMark-hasScreenReaderHelpText"
          >
            te
          </mark>
          st.test.test
        </span>
      </span>
    </div>
  </div>,
]
`;
